# app-prometheus

./: Cargo.toml  README.md  config.yaml
resources/: metrics.rs
schemas/: schema.graphql
src/: lib.rs
