# Cargo manifest for app-prometheus — Phase 48 static-crate shape.
#
# Dual-mode during the dylib → static migration window. yeti-compiler
# reads only [dependencies] when building the dylib (retiring in
# Phase 48 slice 5); cargo uses the full file when building the static
# library this crate compiles to.

[package]
name = "app-prometheus"
version = "0.1.0"
edition = "2024"
description = "Expose yeti metrics in Prometheus exposition format for Grafana and alerting"

[lib]
name = "app_prometheus"
path = "src/lib.rs"

[workspace]

[dependencies]
yeti-sdk = { path = "../../../Developer/yeti/crates/yeti-sdk", features = ["workspace"] }
serde_json = "1"
