[package]
name = "app-prometheus"
edition = "2024"
description = "Prometheus Exporter"
version = "0.1.0"

[package.metadata.app]
customer_id = "yeti"
schemas = "schemas/schema.graphql"
resources = "resources/*.rs"

[package.metadata.auth]
allow_signup = true

[package.metadata.auth.basic]
enabled = true

[package.metadata.auth.jwt]
enabled = true

[dependencies]
